# rescript-grpc

./: .gitignore  README.adoc  SECURITY.md  STATE.scm  justfile
.machine_readable/6scm/: ECOSYSTEM.scm  META.scm  STATE.scm
codec/: Cargo.toml
codec/src/: lib.rs
examples/basic/: package.json  rescript.json
examples/basic/expected/: UserProto.res
examples/basic/protos/: event.proto  streaming.proto  user.proto  wkt.proto
examples/basic/src/: EventProto.res  Example.res  StreamingProto.res  UserProto.res  WktProto.res
protoc-gen-rescript/: Cargo.toml
protoc-gen-rescript/src/: generator.rs  main.rs  templates.rs
runtime/: package.json  rescript.json
runtime/src/: Codec.res  Fetch.res  Json.res  Message.res  Streaming.res  WasmCodec.res  WellKnown.res
