# SPDX-License-Identifier: MPL-2.0
[package]
name = "rescript-grpc-codec"
version = "0.1.0"
edition = "2024"
authors = ["Hyperpolymath"]
description = "WASM-compiled protobuf codec for ReScript"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Protobuf runtime
prost = "0.13"

# WASM allocator
wee_alloc = "0.4"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = "z"
